# spec

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
core/dsl/: Cargo.toml
core/dsl/src/: alias.rs  case.rs  field.rs  kind.rs  lib.rs  name.rs  parser.rs  record.rs  tag.rs  tagged_union.rs  tuple.rs  util.rs
core/dsl/tests/: test_tuple.rs
core/macro/: Cargo.toml
core/schema/: Cargo.toml
core/schema/src/: alias.rs  case.rs  lib.rs  record.rs  tagged_union.rs  tuple.rs  util.rs
