[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/spec"
repository = "https://github.com/edger-dev/spec"
authors = ["YJ Park<yjpark@gmail.com>"]

[workspace]
resolver = "2"
members = [
    "core/*",
]

[workspace.dependencies]
edger_spec_schema = { path = "core/schema", version = "0.1.0" }
edger_spec_dsl = { path = "core/schema", version = "0.1.0" }
edger_spec_macro = { path = "core/schema", version = "0.1.0" }

# Common
snafu = "0.8.5"
serde = { version = "1.0.219", features = ["derive", "alloc"] }
clap = { version = "4.5.34", features = [ "derive" ] }
tracing = "0.1.41"

# Cli
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"
clap-verbosity-flag = "3.0.2"
